...
   You should have received a copy of the GNU General Public License
   along with Keepass2Android.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
    <string name="msalPrefix">msal8374f801-0f55-407d-80cc-9a04fe86d9b2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_file_storage_setup">FileStorageSetupActivity</string>
  <string name="about_feedback">Feedback</string>
  <string name="about_homepage">Homepage</string>
  <string name="AboutText">Keepass2Android is a password manager providing read/write access to KeePass 2.x databases on Android.</string>
  <string name="CreditsText">The User Interface is based on a port of KeepassDroid developed by Brian Pellin. Code for database operations is based on KeePass by Dominik Reichl. The Android robot is reproduced or modified from work created and shared by Google and used according to terms described in the Creative Commons 3.0 Attribution License.</string>
...
  <string name="available_through_keyboard">Entry is available through KP2A Keyboard</string>
  <string name="not_possible_im_picker">Could not open dialog to select input method. Please activate keyboard manually.</string>
  <string name="please_activate_keyboard">Please enable the Keepass2Android keyboard in your system settings.</string>
  <string name="creating_db_key">Creating database key…</string>
  <string name="current_group">Current Group</string>
  <string name="current_group_root">Current Group: Root</string>
  <string name="database">Database</string>
  <string name="digits">Digits</string>
  <string name="disclaimer_formal">Keepass2Android comes with ABSOLUTELY NO WARRANTY; This is free software, and you are welcome to redistribute it under the conditions of the GPL version 2 or later.</string>
  <string name="ellipsis">\u2026</string>
  <string name="enter_filename">Enter database filename</string>
  <string name="entry_accessed">Accessed</string>
  <string name="entry_cancel">Cancel</string>
...
  <string name="entry_override_url">Override URL</string>
  <string name="entry_confpassword">Confirm password</string>
  <string name="entry_created">Created</string>
  <string name="entry_expires">Expires</string>
  <string name="entry_keyfile">Key file (optional)</string>
  <string name="entry_modified">Modified</string>
  <string name="entry_password">Password</string>
  <string name="entry_save">Save</string>
  <string name="entry_title">Name</string>
  <string name="entry_url">URL</string>
  <string name="entry_user_name">User Name</string>
  <string name="entry_extra_strings">Extra string fields</string>
  <string name="entry_binaries">File attachments</string>
...
  <string name="error_wrong_length">Enter a positive integer on length field</string>
  <string name="FileNotFound">File not found.</string>
  <string name="file_browser">File Browser</string>
  <string name="generate_password">Generate Password</string>
  <string name="group">Group</string>
  <string name="hint_comment">comment</string>
  <string name="hint_conf_pass">confirm password</string>
  <string name="hint_generated_password">generated password</string>
  <string name="hint_group_name">Group name</string>
  <string name="hint_keyfile">key file</string>
  <string name="hint_length">length</string>
  <string name="hint_pass">password</string>
  <string name="hint_login_pass">Password</string>
  <string name="hint_title">name</string>
  <string name="hint_url">url</string>
  <string name="hint_override_url">override url</string>
  <string name="hint_tags">tag1, tag2</string>
  <string name="hint_username">username</string>
...
  <string name="menu_create">Create</string>
  <string name="menu_app_settings">Settings</string>
  <string name="menu_db_settings">Database settings</string>
  <string name="menu_delete">Delete</string>
  <string name="menu_move">Move to another group</string>
  <string name="menu_donate">Donate a beer...</string>
  <string name="menu_edit">Edit</string>
  <string name="menu_hide_password">Hide Password</string>
  <string name="menu_lock">Lock Database</string>
  <string name="menu_open">Open</string>
  <string name="menu_rename">Rename</string>
  <string name="menu_search">Search</string>
  <string name="menu_search_advanced">Advanced Search</string>
...
  <string name="omitbackup_title">Don\'t search backup and recycle bin entries</string>
  <string name="omitbackup_summary">Omit \'Backup\' and Recycle Bin group from search results</string>
  <string name="pass_filename">KeePass database filename</string>
  <string name="password_title">Enter database password</string>
  <string name="master_key_type">Select master key type:</string>
  <string name="progress_create">Creating new database…</string>
  <string name="create_database">Create database</string>
  <string name="progress_title">Working…</string>
  <string name="remember_keyfile_summary">Remembers the location of keyfiles</string>
  <string name="remember_keyfile_title">Save keyfile</string>
  <string name="remove_from_filelist">Remove</string>
  <string name="rijndael">Rijndael (AES)</string>
  <string name="root">Root</string>
...
	<string name="RememberRecentFiles_summary">Remember recently opened databases and show them in the Open database screen.</string>
	
	<string name="kp2a_findUrl">Keepass2Android: Find password</string>
  <string name="excludeExpiredEntries">Exclude expired entries</string>
  <string name="search_options">Options</string>
  <string name="caseSensitive">Case sensitive</string>
  <string name="start_open_file">Open file...</string>
  <string name="start_create">Create new database...</string>
  <string name="start_open_url">Open URL...</string>
  <string name="start_create_import">Import file to new database...</string>
  <string name="enter_filename_details_url">The complete URL must be specified including protocol like http://.</string>
  <string name="enter_filename_details_create_import">File to import will be selected in the next step.</string>
  <string name="enable_quickunlock">Enable QuickUnlock</string>
  <string name="QuickUnlock_label">Enter last %1$d characters of your password:</string>
...
	<string name="no_thanks">No, I don\'t like it that much</string>

	<string name="hint_sftp_host">host</string>
	<string name="hint_sftp_port">port</string>
    <string name="hint_sftp_connect_timeout">timeout sec</string>

	<string name="select_storage_type">Select the storage type:</string>

	<string name="filestoragename_file">Local file</string>
	<string name="filestoragename_androidget">Get from third-party app</string>
	<string name="filestoragename_androidsend">Send to third-party app</string>
	<string name="filestoragename_ftp">FTP</string>
	<string name="filestoragename_http">HTTP (WebDav)</string>
...

	<string name="get_regular_version">Get more storage types</string>

	<string name="CertificateWarning">Warning: Server certificate validation failed: %1$s. Install appropriate root certificate on your device or see settings!</string>
	<string name="CertificateFailure">Error: Server certificate validation failed! Install appropriate root certificate on your device or see settings!</string>
	
	<string name="ChangeLog_title">Change log</string>

	<string name="ChangeLog_0_9_2">
		<b>Version 0.9.2</b>\n
		* Added OTP support (compatible with OtpKeyProv plugin)\n
		* Integrated NFC support for OTPs from YubiKey NEO \n
		* Several UI improvements\n
...
